<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fix Europe</string>
    <string name="menu_settings">Settings</string>
    <string name="next">Show more</string>
    <string name="picture">Take Picture</string>
    <string name="show_services">Show Services</string>
    <string name="search_service_text">Service</string>
    <string name="show_incidents">Reported Incidents</string>
    <string name="service_error">Please provide a description</string>
    <string name="service_unknown">Please provide a valid service</string>
    <string name="incident_address">Address</string>
    <string name="incident_address_hint">Incident address (optional)</string>
    <string name="report_error">Could not send report</string>
    <string name="report_ok">Report sent and saved</string>
    <string name="report">Report</string>
    <string name="incident_hint">e.g.: hole in street, tree down</string>
    <string name="search_service_hint">e.g.: vandalism</string>
    <string name="photo_ok">Photo taken</string>
    <string name="photo_error">Photo error. Could not take picture</string>
    <string name="photo_cancel">Photo canceled</string>
    <string name="search_descriptions_text">Description</string>
    <string name="unable">Unable to load. Please try again later.</string>
    <string name="empty_list">No items to be displayed</string>
    <string name="thumbnail">Item Thumbnail</string>
    <string name="menu_report">Report Incident</string>
    <string name="menu_group">View as groups</string>
    <string name="menu_single">View services</string>
    <string name="choose_service">Choose service</string>
    <string name="loading">Loading&#8230;</string>
    <string name="showing">Showing</string>
    <string name="results">results</string>
    <string name="information_unavailable">Unavailable information</string>
    <string name="location_pinpointed">Location pinpointed</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="email">Username/Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signin_message">Signing In</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="no_email">Please provide a username or email</string>
    <string name="no_pass">Please provide a password</string>

    <!-- Preferences -->
    <string name="preferences_report">Incident Preferences</string>
    <string name="preference_phone_checkbox">Allow the use of phone number</string>
    <string name="preference_phone_checkbox_summary">Attach phone number to incident report</string>
    <string name="preference_mail_checkbox">Allow the use of an e-mail</string>
    <string name="preference_mail_checkbox_summary">Attach an e-mail to incident report</string>
    <string name="preference_name_checkbox">Send with name</string>
    <string name="preference_name_checkbox_summary">Attach a first and last name to incident report</string>
    <string name="preference_select_mail">Select e-mail</string>
    <string name="preference_first_name">First name</string>
    <string name="preference_last_name">Last name</string>
    <string name="preference_store_checkbox_summary">Store your requests in the FixEurope</string>
    <string name="preference_store_checkbox">Store in FixEurope</string>

</resources>